// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> should match is's snapshot 1`] = `
<button
  aria-disabled={false}
  aria-label="button"
  data-testid="button"
  disabled={false}
  role="button"
  type="button"
>
  <span
    aria-hidden={true}
    role="img"
  />
  <span
    aria-hidden={true}
    role="img"
  />
</button>
`;

exports[`<Button> should match is's snapshot for loading state: loading 1`] = `
<button
  aria-disabled={true}
  aria-label="button"
  data-testid="button"
  disabled={true}
  role="button"
  type="button"
>
  <span
    aria-hidden={true}
    role="img"
  />
  Loading...
  <span
    aria-hidden={true}
    role="img"
  />
</button>
`;
